--- a/package.json
+++ b/package.json
@@ -7,14 +7,25 @@
   "license": "MIT",
   "dependencies": {
     "@maxmind/geoip2-node": "^3.5.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "is-ip": "^5.0.0"
   },
   "scripts": {
     "build": "tsc"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "rollup": "^3.12.1",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   }
 }
