--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
+      "module": "ESNext",
       "moduleResolution": "node",
       "outDir": "./dist",
       "allowJs": true,
-      "target": "ES5",
+      "target": "ES2020",
       "esModuleInterop": true,
       "types": ["@types/express", "@types/node"]
     },
